FIX: Styles | Spacing | Zoom

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -22,6 +22,8 @@
       padding: 1.25rem;
       border-radius: 1.5rem;
       position: relative;
+      width: 20rem;
+      height: 15rem;
 
       display: flex;
       align-items: center;
@@ -34,6 +36,7 @@
 
       .episodeDetails {
         flex: 1;
+        width: 66.6%;
         margin-left: 1rem;
 
         a {
@@ -43,6 +46,7 @@
           font-weight: 600;
           text-decoration: none;
           line-height: 1.4rem;
+          margin-top: 1rem;
 
           &:hover {
             text-decoration: underline;
@@ -52,6 +56,7 @@
         p {
           font-size: 0.875rem;
           margin-top: 0.5rem;
+          
           max-width: 70%;
           white-space: nowrap;
           overflow: hidden;
@@ -60,13 +65,14 @@
 
         span {
           display: inline-block;
-          margin-top: 8.5rem;
+          margin-top: 3rem;
+          position: absolute;
+          bottom: 1.5rem;
           font-size: 0.875rem;
 
           &:last-child {
-            margin-left: 0.5rem;
+            margin-left: 4rem;
             padding-left: 0.5rem;
-            position: relative;
 
             &::before {
               //dot
@@ -86,11 +92,11 @@
 
       button {
         position: absolute;
-        right: 2rem;
-        bottom: 2rem;
+        right: 0.8rem;
+        bottom: 1rem;
 
-        width: 2.5rem;
-        height: 2.5rem;
+        width: 2rem;
+        height: 2rem;
         background: var(--white);
         border: 1px solid var(--gray-100);
         border-radius: 0.675rem;
