--- a/src/styles/app.module.scss
+++ b/src/styles/app.module.scss
@@ -2,6 +2,7 @@
     display: flex;
 
     main {
-        flex: 1
+        flex: 1;
+        width: 66.6%;
     }
 }
